# fashion-inspiration-app

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
app/: __init__.py  config.py  database.py  db_models.py  main.py  schemas.py
app/services/: classifier.py  library.py  ontology.py  parser.py
app/static/: index.html
app/static/assets/: app.js  styles.css
eval/: README.md  download_pexels.py  evaluate.py  split_dataset.py
eval/data/: manifest.example.jsonl  manifest.jsonl  manifest.one.jsonl  manifest.test.files.jsonl  manifest.test.jsonl  manifest.train.files.jsonl  manifest.train.jsonl
tests/: conftest.py  test_e2e.py  test_filters_integration.py  test_parser.py
